--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,13 @@
 .hero_section {
   margin-top: 5rem;
 }
+.divider {
+  border-bottom: solid #001aff;
+  width: 100px;
+  margin-bottom: 8px;
+}
+
+
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
