--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -68,6 +68,12 @@
         <input class="form-control" formControlName="image" type="text" placeholder="Image URL" name="image">
       </div>
       <div class="form-group">
+        <label>Select Blog Category</label>
+        <select class="form-control" formControlName="category">
+          <option *ngFor="let cat of categories" [value]="cat">{{cat | titlecase}}</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label >Description</label>
         <textarea class="form-control" rows="6" formControlName="description" type="text" placeholder="description"
                   name="description"></textarea>
